--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=db;Username=postgres;Password=1234"
+    "Default": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres"
   }
 }
